<resources>
    <string name="app_name">Resturant Menu</string>
    <string name="title_activity_signin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="grid_view_option_key">show_items_grid_pref</string>
    <string name="grid_view_option_value">Show Items in Grid</string>
    <string name="title_activity_settings">Settings</string>
    <string name="export_as_json">Export</string>
    <string name="import_as_json">Import</string>
    <string name="filter">Filter</string>
    <string name="select_all">Select All</string>

    <string-array name="categories">
        <item>Salads</item>
        <item>Starters</item>
        <item>Entrees</item>
        <item>Desserts</item>
        <item>Drinks</item>
    </string-array>

</resources>
